--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "css-loader": "^2.1.1",
+    "moment-timezone": "^0.5.25",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "sass-loader": "^7.1.0",
