--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
     "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "css-loader": "^2.1.1",
+    "graphql": "^14.3.1",
     "moment-timezone": "^0.5.25",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuetify": "^1.5.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
