--- a/package.json
+++ b/package.json
@@ -8,29 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.1",
-    "animate.css": "^3.7.0",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.9",
     "css-loader": "^2.1.1",
-    "graphql": "^14.3.1",
-    "moment-timezone": "^0.5.25",
+    "moment-timezone": "^0.5.26",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "sass-loader": "^7.1.0",
+    "slim-select": "^1.23.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuetify": "^1.5.14",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.7",
+    "vue-select": "^3.1.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-service": "^3.9.2",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
