--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^7.1.0",
     "slim-select": "^1.23.0",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.7",
     "vue-select": "^3.1.0",
     "vuex": "^3.1.1"
